--- a/style.css
+++ b/style.css
@@ -25,9 +25,10 @@ body {
 .img {
     width: 20px;
     height: 20px;
-    border-radius: 50%;
+    border-radius: 4%;
     display: flex;
     justify-content: flex-start;
+    align-items: baseline;
 }
 header {
     grid-area: 1 / 1;
@@ -70,11 +71,12 @@ header {
     flex-direction: column; 
     justify-content: center;
     align-items: center;
+    line-height: 25px;
     
 }
 .listwo {
     grid-area: 1 / 1; 
-    text-align: justify;  
+    text-align: left;  
 }
 
 .table {
